Un hardcoded the redirect url (#52)
Cleaned up jconfig code retrieval.